--- a/Changes
+++ b/Changes
@@ -1,8 +1,18 @@
 Revision history for Pod-POM-View-HTML-Filter
 
+0.04 Tue Tue Oct 12 09:46:17 CEST 2004
+        [ENHANCEMENTS]
+        - when the filter is not known by PPVHF, simply use the default
+          filter (<pre>...</pre>)
+        - $Pod::POM::View::HTML::Filter::default is the default filter
+        [FIXES]
+        - set Getopt::Long::Configure back to defaults just before calling
+          perltidy, which may break otherwise
+        - consistently use carp and croak
+
 0.03 Thu Jul 29 01:05:02 CEST 2004
         [ENHANCEMENTS]
-        - more flexible interface for the  add() method, that lets one
+        - more flexible interface for the add() method, that lets one
           add more parameters to a filter (requires, verbatim)
         - the verbatim mode for filters prevent the present()
           method to be called on the verbatim, text and code items it
