--- a/Changes
+++ b/Changes
@@ -1,5 +1,41 @@
 Revision history for Pod-POM-View-HTML-Filter
 
+0.06 Tue Jan 16 01:59:05 CET 2007
+        [ENHANCEMENTS]
+        - add() behaves differently when called on the class or an
+          instance, and updates the appropriate list of filters:
+          + an instance always has access to the latest class filters (so
+            you can update the class with add() after creating an object
+            and it will DWYM)
+          + it's possible to override the class filter for a single
+            instance
+        - blocks are now automatically unindented before processing,
+          but it's possible to prevent this (at your own risks) with
+          auto_unindent => 0 in the constructor
+        - HTML characters '&', '<' and '>' are now escaped in the default
+          filter
+        - the result is enclosed in <pre>...</pre> if any of the filters
+          if declared as 'verbatim', and also if Pod::POM detected a
+          verbatim block inside the begin block (which it shouldn't do,
+          since begin block should be opaque to it... but that's a bug
+          in Pod::POM). Otherwise it's enclosed in <p>...</p> tags.
+        - when processing a filter stack, if one of the filters is not
+          available, the whole stack is replaced with the 'default'
+          filter
+        [DOCUMENTATION]
+        - the Caveats listed in the documentation are no longer valid,
+          since the content of the begin block is now processed as
+          a string where the POD escape sequences are left alone
+        [FIXES]
+        - the bug discovered in version 0.03 has been unexpectedly
+          removed, when reworking the processing of the filter stack
+        [TESTS]
+        - the main test script (t/20builtins.t) uses the files in t/pod/
+          as test data. Those files contain a pod source, and the expected
+          results according to a combination of available filters.
+        - the tests related to the "disappearing POM" bug are no longer
+          marked TODO
+
 0.05 Thu Oct 14 11:44:14 CEST 2004
         [FEATURES]
         - support stacking filters by using the | notation
